--- a/config/database.yml
+++ b/config/database.yml
@@ -15,18 +15,18 @@
 # gem 'pg'
 #
 development:
-  adapter: postgresql
+  adapter: sqlite3
   database: my_database_development
   pool: 5
   timeout: 5000
 test:
-  adapter: postgresql
+  adapter: sqlite3
   database: my_database_test
   pool: 5
   timeout: 5000
 
 production:
-  adapter: postgresql
+  adapter: sqlite3
   database: my_database_production
   pool: 5
   timeout: 5000
